@@ -1,0 +1,10 @@
+
+## Building
+
+``` shell
+autoreconf --install
+autoconf
+./configure
+make
+make install
+```
